2011-05-25  Andrew Scherkus  <scherkus@chromium.org>

Reviewed by Eric Carlson.

        Fix media element regression where ended event stopped firing after changing the src attribute.

        https://bugs.webkit.org/show_bug.cgi?id=61336

        * media/media-ended-expected.txt: Added.
        * media/media-ended.html: Added.
2011-05-25  Andrew Scherkus  <scherkus@chromium.org>

        Reviewed by Eric Carlson.

        Fix media element regression where ended event stopped firing after changing the src attribute.

        https://bugs.webkit.org/show_bug.cgi?id=61336

        Test: media/media-ended.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::prepareForLoad):

Canonical link: https://commits.webkit.org/76874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87323 268f45cc-cd09-0410-ab3c-d52691b4dbfc